<resources>
    <string name="app_name">Saviour</string>
    <string name="str_login">Login</string>
    <string name="str_mobile">Mobile Number</string>
    <string name="str_pass">Password</string>
    <string name="signUp_underline"><u>Sign Up</u></string>
    <string name="str_guest">Continue as Guest</string>
    <string name="str_signUp">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_name">Name</string>
    <string name="str_email">Email</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_allergies">Allergies</string>
    <string name="str_illnesses">Chronic Illnesses</string>
    <string name="str_weight">Weight (in Kg)</string>
    <string name="str_height">Height( in cms)</string>
    <string name="str_general">General Info :</string>
    <string name="str_next">Next</string>
    <string name="str_personal">Personal Info :</string>
    <string name="str_finish">Finish</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
