<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp1"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/et5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:hintTextAppearance="@style/MyHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_personal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_height"
                android:inputType="number"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/et6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:hintTextAppearance="@style/MyHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_weight"
                android:inputType="number"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/et7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:hintTextAppearance="@style/MyHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_illnesses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_illnesses"
                android:inputType="textAutoComplete"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/et8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorPrimaryLight"
            app:hintTextAppearance="@style/MyHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et7"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_allergies"
                android:inputType="textAutoComplete"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_finish"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/str_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et8" />

        <TextView
            android:id="@+id/tv_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/str_personal"
            android:textColor="@color/colorIcons"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>